# doc

./: Draft proposal.md  Resume.md  plan.md  report(mod).md  report.md
Development/source/: PixelsProcessing.cpp
goTest/: Test.go
media/: Thumbs.db
project/: ApplicationFactory.cpp  ApplicationFactory.h  Builder.cpp  Builder.h  CMakeLists.txt  CellSize.h  Decimator.h  Edge.h  EdgeTable.cpp  EdgeTable.h  Image.h  ImageCollection.h  IndexedTriangle.h  IndexedVertex.h  LineSegment.h  LookUpTable.h  MarchingCube.cpp  MarchingCube.h  Mesh.cpp  Mesh.h  MorfologicalFilter.cpp  MorfologicalFilter.h  Normal.cpp  Normal.h  OrderedPair.h  Plane.h  Recorder.cpp  Recorder.h  Segmentation.h  Smoother.cpp  Smoother.h  Triangle.cpp  Triangle.h  Vector.h  Vertex.cpp  Vertex.h  conanfile.txt  filter.cpp  filter.h  grid.cpp  (+4 more)
